@@ -1,0 +1,45 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- https://products.z-wavealliance.org/products/1563 -->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+  <!-- The thermostat does not properly report its operating modes -->
+  <CommandClass id="64">
+    <SupportedModes>
+      <Mode index="0" label="Off"/>
+      <Mode index="1" label="Heat"/>
+    </SupportedModes>
+  </CommandClass>
+
+  <!-- This thermostat's setpoint descriptions are 0 based, not 1 -->
+  <CommandClass id="67" base="0"/>
+
+  <!-- Configuration Parameters -->
+  <CommandClass id="112">
+    <Value type="list" index="1" genre="config" label="Temperature sensor" min="0" max="1" value="0" size="1">
+      <Help>Enables Temperature Sensor</Help>
+      <Item label="Disable" value="0"/>
+      <Item label="Enable" value="255"/>
+    </Value>
+    <Value type="list" index="2" genre="config" label="Temperature Scale" min="0" max="1" value="0" size="1">
+      <Help></Help>
+      <Item label="Celsius" value="0"/>
+      <Item label="Fahrenheit" value="255"/>
+    </Value>
+    <Value type="byte" index="3" genre="config" label="Delta Temperature" value="10">
+      <Help>
+        Delta Temperature in 0.1 degree steps.
+      </Help>
+    </Value>
+  </CommandClass>
+  <!-- Association Groups -->
+  <CommandClass id="133">
+    <Associations num_groups="5">
+      <Group index="1" max_associations="1" label="Lifeline"/>
+      <Group index="2" max_associations="4" label="Thermostat Mode Set"/>
+      <Group index="3" max_associations="4" label="Binary Switch Set"/>
+      <Group index="4" max_associations="4" label="Unsolicited Battery Level Reports"/>
+      <Group index="5" max_associations="4" label="Thermostat Set Point Reports"/>
+      <Group index="6" max_associations="4" label="Unsolicited Sensor Multilevel Reports" />
+    </Associations>
+  </CommandClass>
+
+</Product>
