@@ -212,6 +212,7 @@ Version 1.5
  - Add 2GIG Technologies CT32 Thermostat (Nechry)
  - Add KAIPULEK Celling PIR Sensor (Nechry)
  - Add Sensative Strips Confort (Nechry)
+ - Add Secure Controls (Horstmann) SRT-321 Thermostat (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
